student Repo extend